assets/styles/common/elements.scss
$heading-margin-bottom: 0.5em;
$element-margin-bottom: 1.5em;

.structured-content,
.activity-editor .rich-text-editor,
.content {
  h1.title {
    font-size: 2.5em;
    font-weight: 600;

    .page-number {
      font-weight: normal;
    }
  }

  h1,
  .h1 {
    font-size: 1.5em;
    font-weight: 600;
    margin-bottom: $heading-margin-bottom;
  }
  h2,
  .h2 {
    font-size: 1.5em;
    margin-bottom: $heading-margin-bottom;
  }
  h3,
  .h3 {
    font-size: 1.375em;
    margin-bottom: $heading-margin-bottom;
  }
  h4,
  .h4 {
    font-size: 1.25em;
    margin-bottom: $heading-margin-bottom;
  }
  h5,
  .h5 {
    font-size: 1.125em;
    margin-bottom: $heading-margin-bottom;
  }
  h6,
  .h6 {
    font-size: 1em;
    font-weight: 600;
    margin-bottom: $heading-margin-bottom;
  }

  & > p {
    line-height: 2em;
    margin-bottom: $element-margin-bottom;
  }

  a,
  a.btn.btn-link {
    color: var(--color-delivery-primary);

    &:hover {
      color: var(--color-delivery-primary-600);
    }
  }

  blockquote {
    margin-top: 12px;
    font-family: Georgia, Cambria, 'Times New Roman', Times, serif;
    border-left: 3px solid var(--color-gray-400);
    padding-left: 20px;
    padding-bottom: 2px;
    word-break: break-word;
    margin-bottom: $element-margin-bottom;

    p:last-of-type {
      margin-bottom: 0;
    }
  }

  code {
    color: #e83e8c;
  }

  pre {
    text-align: left;
    color: var(--color-body-color);
    background: var(--color-gray-100);
    font-family: 'Source Code Pro', 'Courier New', Courier, monospace;
    font-size: 0.75em;
    letter-spacing: -0.003em;
    border-radius: 6px;
    padding: 1em;
    margin-bottom: $element-margin-bottom;

    code {
      color: inherit;
    }

    code.hljs {
      background: inherit;
    }
  }

  ul {
    padding-left: 1.5em;
    margin-bottom: $element-margin-bottom;
    list-style: disc;
    // Nested lists without a style specified go disc->circle->square then back to disc for the rest as they indent
    ul {
      list-style: circle;
      ul {
        list-style: square;
        ul {
          list-style: disc;
        }
      }
    }
  }

  ol {
    padding-left: 1.5em;
    margin-bottom: $element-margin-bottom;
    list-style: decimal;
  }

  ul li,
  ol li {
    margin-bottom: 0.25rem;
  }

  ul,
  ol {
    ul,
    ol {
      margin-bottom: 0px; // Nested lists should not have bottom margin
    }
  }

  .dl-title {
    color: var(--color-green-400);
    font-size: 1.3em;
    font-weight: bold;
  }

  dl dt {
    margin-left: 10px;
    margin-bottom: 0px;
    margin-top: 8px;
    p {
      margin-bottom: 0;
    }
  }

  dl dd {
    margin-left: 18px;
    margin-bottom: 0;
    p {
      margin-bottom: 0;
    }
  }

  table {
    width: auto;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    margin: auto;
    border-collapse: collapse;
    table-layout: auto;
    word-wrap: break-word;
    overflow: hidden;
    margin-bottom: $element-margin-bottom;

    th {
      background-color: rgba(var(--color-blue-400), 15%);
    }

    th,
    td {
      min-width: 100px;

      p:last-of-type {
        margin-bottom: 0;
      }
    }
  }

  .table-borderless {
    border: 0;
    tr,
    td {
      border: 0;
    }
  }

  .table-bordered {
    th {
      border-right: 1px solid #e5e5e5;
    }
  }

  img {
    margin-bottom: $element-margin-bottom;
  }

  .img-fluid {
    display: inline-block;
    margin: 1.5em auto;
  }

  figure > img.d-block {
    margin-bottom: initial;
  }

  img.d-block,
  iframe.d-block {
    display: block;
    max-width: 100%;
    max-height: 800px;
    margin: auto;
  }

  img.float-md-right,
  img.float-md-left,
  iframe.float-md-right,
  iframe.float-md-left {
    max-width: 400px;
  }

  .float-md-right {
    float: right;
  }

  .float-md-left {
    float: left;
  }

  .definition {
    margin-bottom: $element-margin-bottom;

    .term {
      color: var(--color-green-400);
      font-size: 1.3em;
      font-weight: bold;
    }

    .meanings-empty {
      display: none;
    }

    .meanings-single {
      display: inline;
      padding-left: 3px;
      li {
        list-style: none;
        display: inline;
        p {
          display: inline;
        }
      }
    }

    .meanings {
      p {
        margin-bottom: 5px;
      }
    }

    .meaning {
      margin-bottom: 0px;
    }
    .translation {
      font-style: italic;
    }

    .play-button {
      position: relative;
      top: 4px;
      font-size: 16px;
      margin-right: 3px;
      cursor: pointer;
    }

    .translation {
      p {
        display: inline;
      }
    }
  } // .definition

  .pronunciation .play-button {
    margin: 0px 2px 0px 5px;
    position: relative;
    top: 5px;
  }

  .pronunciation,
  .pronunciation-player {
    margin-bottom: $element-margin-bottom;

    p {
      display: inline;
    }
  }

  .pronunciation-player {
    text-decoration: underline;
    color: var(--link-color);
    cursor: pointer;
  }

  .callout-inline,
  .formula-inline {
    display: inline-block;
    padding: 2px 0.5em;

    mjx-container[display='true'] {
      pointer-events: none;
      margin: 0px !important;
    }
  }

  .callout-inline,
  .callout {
    margin-bottom: $element-margin-bottom;
  }

  .formula {
    /* The mathjax formulas were rendering out much larger than the surrounding text, so we're scaling them down to better match the
       legacy content, but the callouts should not be scaled down since that made them look too small. */
    font-size: 0.9em;
  }

  .callout-block,
  .formula {
    display: block;
    margin: 8px 0px;
    padding: 12px;
    text-align: center;
    margin-bottom: $element-margin-bottom;

    /* MER-2118 MER-2121 - Center block level formulas & callouts */
    width: 100%;

    blockquote,
    ol,
    ul,
    .monaco-editor {
      text-align: left;
    }
    mjx-container[display='true'] {
      pointer-events: none;
    }
  }

  .dialog {
    display: flex;
    flex-direction: column;
    border-radius: 2px;
    margin-bottom: $element-margin-bottom;

    .dialog-line {
      &.speaker-1 {
        background-color: #d1e7dd;
      }
      &.speaker-2 {
        background-color: #f8d7da;
      }
      &.speaker-3 {
        background-color: #cff4fc;
      }
      &.speaker-4 {
        background-color: #fff3cd;
      }
      &.speaker-5 {
        background-color: #ffe5d0;
      }
      display: flex;
      flex-direction: row;
      margin-bottom: 0.5rem;
      align-items: center;

      color: var(--color-delivery-body);

      .dialog-content {
        flex-grow: 1;
      }
      .dialog-speaker {
        padding: 0.5rem;
        width: calc(80px + 1rem);
        margin-right: 1rem;

        .speaker-portrait {
          width: 80px;
        }
        .speaker-name {
          font-size: 0.75rem;
          text-align: center;
        }
      }
    }
  }

  .figure {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: $element-margin-bottom;

    figure {
      figcaption {
        color: var(--color-primary);
      }
      padding: 1rem;
    }
  }

  .caption-wrapper {
    display: flex;
    justify-content: center;
    margin-bottom: $element-margin-bottom;

    figure {
      display: block;
      background-color: var(--color-gray-100);
      padding: 20px;
      border-radius: 6px;
      margin: auto;

      figcaption {
        margin-bottom: 8px;
        text-align: center;
        margin-top: 8px;
        color: black;
      }

      .embed-responsive {
        margin: auto;
      }
    }
  }

  .figure-img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: $element-margin-bottom;
  }

  .embed-responsive {
    width: 90%;
    height: 100%;
    margin: 0 auto;
    margin-bottom: $element-margin-bottom;

    // ensure embed-responsive is 16:9 ratio
    // https://stackoverflow.com/a/54924505
    &.embed-responsive-16by9 {
      position: relative;
      padding-bottom: 56.25%; /* 16:9 */
      height: 0;

      iframe.embed-responsive-item {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
      }
    }
  }

  .popup-anchor {
    color: var(--color-emerald-600);
    font-style: italic;
    cursor: pointer;
    font-weight: bold;

    &.popup-click {
      text-decoration: underline;
    }
  }

  .popup-arrow div:first-of-type {
    @media (prefers-color-scheme: light) {
      border-top-color: var(white) !important;
    }

    @media (prefers-color-scheme: dark) {
      border-top-color: rgb(82 82 82) !important;
    }
  }

  .popup-content {
    p:last-of-type {
      margin: 0;
    }
  }

  .popup-anchor,
  span.term {
    font-weight: bold;
    color: var(--color-emerald-600);
    font-style: italic;
  }

  .popover-body {
    max-width: 276px;
  }

  table {
    min-width: fit-content;
    margin-bottom: $element-margin-bottom;
  }

  audio {
    min-width: 50%;
    margin: auto;
    margin-bottom: $element-margin-bottom;
  }

  .video-player {
    width: 90%;
    margin: auto;
    margin-bottom: $element-margin-bottom;
  }

  em.deemphasis {
    font-style: normal;
    color: var(--color-gray-400);
  }

  select {
    /* MER-2215 Don't use OpenSans for the select options. When you do, the superscript characters don't align properly.   */
    font-family: Arial, Helvetica, sans-serif;
  }

  input[type='text'],
  input[type='numeric'],
  select.dropdown-input {
    &.input-size-small {
      width: 80px;
    }
    &.input-size-medium {
      width: 180px;
    }
    &.input-size-large {
      width: 380px;
    }
  }

  div.math-input {
    math-field {
      width: 240px;
    }

    &.input-size-small {
      math-field {
        width: 120px;
      }
    }
    &.input-size-medium {
      math-field {
        width: 240px;
      }
    }
    &.input-size-large {
      math-field {
        width: 400px;
      }
    }
  }
}

.conjugation {
  .title {
    color: var(--color-green-400);
    font-size: 2em;
    line-height: 2.1em;
    font-weight: bold;
  }
  .verb {
    margin-bottom: 0.1rem;
  }
  .conjugation-cell {
    p:first-of-type {
      display: inline;
      margin-left: 1rem;
    }
  }

  table {
    margin-top: 1rem;
    .clickable {
      color: var(--color-primary);
      cursor: pointer;
    }
    .clickable:hover {
      text-decoration: underline;
    }
  }
}

html.dark {
  .structured-content,
  .activity-editor .rich-text-editor,
  .content {
    pre {
      color: var(--color-body-color-dark);
      background: var(--color-gray-900);
    }

    .caption-wrapper {
      display: flex;
      justify-content: center;

      figure {
        background-color: var(--color-gray-700);

        figcaption {
          color: white;
        }
      }
    }
  }
}

